arrange app and add db setup

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,35 @@
 [package]
-name = "rust-newsletter"
+name = "rust_newsletter"
 version = "0.1.0"
 edition = "2021"
+authors = ["Austin Jones <jonesaustindev@gmail.com>"]
+
+[lib]
+path = "src/lib.rs"
+
+[[bin]]
+name = "rust_newsletter"
+path = "src/main.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+actix-web = "4"
+tokio = { version = "1", features = ["full"] }
+serde = { version = "1", features = ["derive"] }
+config = "0.13"
+
+[dependencies.sqlx]
+version = "0.6"
+default-features = false
+features = [
+  "runtime-tokio-rustls",
+  "macros",
+  "postgres",
+  "uuid",
+  "chrono",
+  "migrate"
+]
+
+[dev-dependencies]
+reqwest = { version = "0.11" }
